--- a/index.html
+++ b/index.html
@@ -22,8 +22,37 @@
     <main>
         <section class="container_backround_image"></section>
         <h1>PortoLogística</h1>
-        <h2>Soluções Interadas Para Gestão Portuária</h2>
+        <h2>Soluções Integradas Para Gestão Portuária</h2>
         <button>Serviços</button>
     </main>
+
+    <section class="sobre">
+        <span>Gestão Portuária Integrada</span>
+        <h3>Simplificando suas operações portuarias</h3>
+        <p> A PortoLogistica é um sistema de gestão integrado de ultima geração desenvolvido para aumentar a eficiência e a segurança das operações portuárias no Brasil. Nossa plataforma oferece monitoramento em tempo real, automação de processos e análise de dados, garantindo que suas necessidades de movimentação, descarga e armazenamento de carga sejam atendidas com precisão. Faça parceria conosco para obter uma solução robusta e confiável para agilizar seus fluxos logísticos. </p>
+        
+        <span class="contato"><a href="#">Entre em contato</a></span>
+        <img src="./imagens/imagem_gestao_portuaria.png" alt="">
+
+        <section class="cards">
+            <h2>Nossas Soluções</h2>
+            <h2>O que esperar do nosso sistema</h2>
+            <img src="./imagens/img_box_1.png" alt="">
+            <h3>Containers a todo momento</h3>
+            <p>Alugue seu container a qualquer momento entrando em contato com os nossos colaboradores</p>
+
+            <img src="./imagens/img_box_2.png" alt="">
+            <h3>+ 1000 navios</h3>
+            <p>Temos mais de 1000 navios prontos para lidar com suas demandas</p>
+
+            <img src="./imagens/img_box_3.png" alt="">
+            <h3>Monitoramento</h3>
+            <p>Nosso monitoramento é feito em tempo real com os profissionais mais qualificados do mercado</p>
+
+        </section>
+
+        
+
+    </section>
 </body>
 </html>
